# management-dashboard

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  rxconfig.py
.claude/: settings.json
.claude/commands/: design-approve.md  dev.md  flexible-workflow-composer.md  hime.md  issue.md  phase6.md  req.md  v0-generate.md  v0-validate.md
.claude/hooks/: auto-approve.py  branch_guard.py  constitution.sh  design-system-check.py  design-system-context.py  dod-check.py  gate.py  quality-gate-hook.py  quality-ts.py  review.py  session_cleanup.py  session_manager.py  sync-guardrails.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  decision_record.yml  feature_request.yml
.github/workflows/: auto-approve.yml  ci.yml  codeql.yml  deploy-production.yml  e2e.yml  issue-close-validator.yml  issue-validator.yml  label-protection.yml  labeler.yml  pr-check.yml  pr-governance.yml  quality-gate.yml  release.yml  stale.yml  sync-notion.yml  sync-templates.yml
data/: notion_cost_records_sample.json  notion_cost_schema.json
docs/: DoD_STANDARDS.md
docs/requirements/: REQ-6.md  issue-7-api-requirements.md  issue-8-ipo-approval-workflow-ui.md  issue-8-ui.md
management_dashboard/: management_dashboard.py
next-app/: README.md  package-lock.json  package.json  vitest.config.ts
next-app/.storybook/: preview.tsx
scripts/: sync_notion_to_supabase.py
supabase/: config.toml
supabase/migrations/: 20250107000000_cleanup_failed_migration.sql  20250107000001_create_cost_orders.sql  (+8 more)
tests/: test_app.py  test_approval_db.py
(+99 files in other folders)
